--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
   justify-content: center;
   align-items: center;
   transition: all 300ms;
+  background-color: #ecf0f1;
 }
 
 /* Make images easier to work with */
@@ -105,7 +106,7 @@ select {
 /*  custom styles */
 
 body.dark {
-  background-color: #111;
+  background-color: var(--color-dark);
   transition: all 300ms;
 }
 
@@ -124,6 +125,7 @@ body.dark {
   padding: 5px;
   height: 26px;
   width: 50px;
+  cursor: pointer;
 }
 
 .ball {
